test/TestPhases/typechecker/invalid/unsupportedmoduleannotation.blc

@[CFunction (binding = "<c-function macro>", header = "<C header>.h")]
module
